# rtls.ai.copilot.ceg-copilot-instructions

./: .gitignore  CEG-CONVERSION-COMPLETE.md  Makefile  README.md  bulk_install.sh  copy-me-to-copilot-instructions.md  force_deploy_plugins.sh  pyproject.toml  setup_home_symlinks.sh
.github/: copilot-instructions.md
code_review/: build-run-code-review.instructions.md  cdc-code-review.instructions.md  rtl-code-review.instructions.md  rtl-lint-code-review.instructions.md  val-code-review.instructions.md
docs/: ceg-adaptation-guide.md  ceg-conversion-examples.md  ceg-quick-start.md  ceg-variant-overview.md  known-issues.md  plugin-tree-cleanup-plan.md  plugin-tree-cleanup-tracker.md
personal_skills/ddg_mcp_skill_writer/: ddg_mcp_skill_writer.md
personal_skills/mcp_creator/: mcp_creator.md
plugins/access/: plugin.json  pyproject.toml
plugins/block-diagram/: plugin.json
plugins/build-run/: .mcp.json  build-run.agent.md  plugin.json  pyproject.toml
plugins/build-run/mcp-server/: commands.py  pyproject.toml  server_build_run.py
plugins/build-run/mcp-server/tests/: test_commands.py  test_install_mode.py  test_server.py  test_tool_docstrings.py
plugins/fe-setup/: .mcp.json  ceg_repos.yml  env-detect.agent.md  fe-setup.agent.md  plugin.json
plugins/hsd/: .mcp.json  plugin.json  pyproject.toml
plugins/ip-management/: plugin.json
plugins/iu-debug/: plugin.json
plugins/rtl-design/: plugin.json
plugins/runfv/: .mcp.json  plugin.json  pyproject.toml
plugins/turnin/: .mcp.json  plugin.json  pyproject.toml
plugins/validation/: .mcp.json  plugin.json
plugins/validation/mcp-server/: pyproject.toml  register_topology.py  server_validation.py  standard_runs_query.py
plugins/validation/mcp-server/backends/: __init__.py
plugins/validation/mcp-server/backends/vmanager/: __init__.py  _client_domain.py  _utils.py  client.py
plugins/validation/mcp-server/reference/: vamp_plan.md
plugins/validation/mcp-server/tests/: test_benchmarks.py  test_crifd_query.py  test_register_topology.py  test_runtime_helpers.py  test_vmanager.py
plugins/validation/mcp-server/validation_mcp/: benchmarks.py  errors.py  server.py  settings.py
plugins/validation/mcp-server/validation_mcp/runtime/: __init__.py  client_factory.py  output.py  pagination.py  query_adapter.py  tool_runtime.py
plugins/validation/mcp-server/vmanager/: __init__.py  _failure_clusters.py  _plan.py  _run_failure_clusters.py  _runs.py  _sessions.py  _vsif_config.py  _vsif_groups.py  _vsif_hierarchy.py  _vsif_sessions.py  _vsif_tests.py
scripts/: convert_to_ceg.py  create_plugin_marketplace_entry.py  generate_marketplace_diagram.py  validate_plugin_metadata.py
tests/ddgmcp/: test_install_mode.py  test_server.py  test_standard_runs_query.py  test_vmanager.py  test_vmanager_expanded.py  test_vmanager_readiness.py
tests/prompt_quality/: prompt_quality_helpers.py  test_agents.py  test_create_plugin_marketplace_entry.py  test_instructions.py  test_plugin_manifests.py  (+2 more)
uncommon_repo_instructions/: ai_prompt_manager.instructions.md  ddg-ironchef.instructions.md  griffin_user_guide.instructions.md  systemverilog.instructions.md  utdb_reference_manual.instructions.md  utdb_user_guide.instructions.md
(+89 files in other folders)
